--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 							<h3><span>Web Developer / Software Engineering Student</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="#"><i class="icon-twitter2"></i></a></li>
-									<li><a href="#"><i class="icon-facebook2"></i></a></li>
-									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+									<li><a href="https://twitter.com/khalilrezgui3"><i class="icon-twitter2"></i></a></li>
+									<li><a href="https://www.facebook.com/Khalil.rezgui69/"><i class="icon-facebook2"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/khalil-rezgui/"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://github.com/khalilrez"><i class="icon-github2"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -81,17 +81,21 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Louie Jie Mahusay</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">info@yoursite.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>
-						<li><span class="first-block">Address:</span><span class="second-block">198 West 21th Street, Suite 721 New York NY 10016</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">Khalil Rezgui</span></li>
+						<li><span class="first-block">Phone:</span><span class="second-block">+216 92 428 859</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block">khalilrezgui0@gmail.com</span></li>
+						<li><span class="first-block">Website:</span><span class="second-block">khalilrezgui.digital</span></li>
+						<li><span class="first-block">Address:</span><span class="second-block">Hammam lif , Ben arous , Tunisia 2050</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
-					<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+					<p>I am an aspiring Software engineering student
+						withe xperience building websites
+						, web applications,and desktop application.</p>
+					<p>Professional experience working with Spring and Angular.
+						Some experience in Mobile development with Java.
+						Built Some projects in the field of Gaming and AR with UNITY & C#..</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-twitter2"></i></a></li>
