--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
 							<h1><span>Khalil Rezgui</span></h1>
 
-							<h3><span>Web Developer / Software Engineering Student</span></h3>
+							<h3><span>Web Developer / Software Engineering Student <br> <small>Graphic Designer</small></span></h3>
 
 							<p>
 								<ul class="fh5co-social-icons">
@@ -100,14 +100,15 @@
 						, web applications,and desktop application.</p>
 					<p>Professional experience working with Spring and Angular.
 						Some experience in Mobile development with Java.
-						Built Some projects in the field of Gaming and AR with UNITY & C#..</p>
+						Built Some projects in the field of Gaming and AR with UNITY & C#.
+						I also do Graphic design for different NGO's including my local Rotaract</p>
 					<p>
-						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter2"></i></a></li>
-							<li><a href="#"><i class="icon-facebook3"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
-						</ul>
+					<ul class="fh5co-social-icons">
+						<li><a href="https://twitter.com/khalilrezgui3"><i class="icon-twitter2"></i></a></li>
+						<li><a href="https://www.facebook.com/Khalil.rezgui69/"><i class="icon-facebook3"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/khalil-rezgui/"><i class="icon-linkedin2"></i></a></li>
+						<li><a href="https://github.com/khalilrez"><i class="icon-github2"></i></a></li>
+					</ul>
 					</p>
 				</div>
 			</div>
@@ -131,11 +132,14 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Senior Developer</h3>
-									<span class="company">Company Name - 2016 - Current</span>
+									<h3 class="timeline-title">Front-End Developer</h3>
+									<span class="company">Softtodo - 2021 - 3 months</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>During this job , I took care of creating modules for a client's 'CMS' project.
+									I used the Twig templating engine , Bootstrap 5 , and JavaScript to create
+									create the different components.</p>
+
 								</div>
 							</div>
 						</li>
@@ -143,11 +147,14 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Junior Developer</h3>
-									<span class="company">Company Name - 2013 - 2015</span>
+									<h3 class="timeline-title">Full stack Web Dev Internship</h3>
+									<span class="company">Amen bank - 2021 - 6 Months</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>This internship was for my Bachelors degree final year project.
+									I was assigned to make an E-Banking Platform & it's admin dashboard in a 2-man Team using a modified
+									version of the SCRUM methodology.
+									The Stack we used was : Angular / Spring boot & Hibernate / PostgreSQL</p>
 								</div>
 							</div>
 						</li>
@@ -155,11 +162,13 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">UI/UX Designer</h3>
-									<span class="company">Company Name - 2010 - 2012</span>
+									<h3 class="timeline-title">Commercial Assistant</h3>
+									<span class="company">Tunisie Telecom - 2019 - 2 months</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>This was a new experience away from the typical IT environment.
+									I worked as a commercial assistant for Tunisie Telecom which improved
+									my communication skills and my team-working ability</p>
 								</div>
 							</div>
 						</li>
@@ -172,11 +181,12 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Masters Degree</h3>
-									<span class="company">University Name - 2007 - 2009</span>
+									<h3 class="timeline-title">Engineering Degree</h3>
+									<span class="company">ESPRIT - 2021 - Current </span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>I was admitted to ESPRIT private engineering school to start my engineering degree
+									where I study Software engineering & different fields of computer science. </p>
 								</div>
 							</div>
 						</li>
@@ -185,10 +195,12 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Bachelors Degree</h3>
-									<span class="company">University Name - 2002 - 2006</span>
+									<span class="company">ISAMM - 2018 - 2021</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>I finished my bachelors degree in Computer Science in the Higher Institute of Multimedia
+									Arts of Manouba. Where I took my diploma with honors after 3 years of hard work.
+									I Majored in Computer science with a minor in Multimedia & Design</p>
 								</div>
 							</div>
 						</li>
@@ -196,26 +208,16 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Diploma Course</h3>
-									<span class="company">College Name - 1999 - 2001</span>
+									<h3 class="timeline-title">Baccalauréat</h3>
+									<span class="company">Hammam-Lif HighSchool - 2014 - 2018</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>After 4 years of High School, I took my baccalauréat with honors.
+									I majored in Computer Science during these years.</p>
 								</div>
 							</div>
 						</li>
-						<li class="animate-box timeline-unverted">
-							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">Graduation</h3>
-									<span class="company">College Name - 1994 - 1998</span>
-								</div>
-								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-								</div>
-							</div>
-						</li>
+
 			    	</ul>
 				</div>
 			</div>
@@ -238,8 +240,8 @@
 								<i class="icon-paintbrush"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Web Design</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<h3>Graphic Design</h3>
+								<p>From Logos to Billboards, You will be satisfied with your designs.</p>
 							</div>
 						</div>
 					</div>
@@ -247,23 +249,24 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-briefcase"></i>
+								<i class="icon-monitor"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Branding</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<h3>Web Master</h3>
+								<p>I will ensure that websites are secure, functional, visually appealing, user-friendly, and consistently updated</p>
 							</div>
+
 						</div>
 
 					</div>
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-search"></i>
+								<i class="icon-desktop"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Analytics</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<h3>Desktop & Android Applications</h3>
+								<p>I'll design and create the native apps you need for your business !</p>
 							</div>
 						</div>
 					</div>
@@ -278,8 +281,8 @@
 								<i class="icon-bargraph"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Web Developent</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<h3>WordPress Web Development</h3>
+								<p>Choose a Theme , And You WordPress Site will be ready in no time !</p>
 							</div>
 						</div>
 
@@ -291,8 +294,8 @@
 								<i class="icon-genius"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Web Marketing</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<h3>From Scratch Web Development</h3>
+								<p>I will design, build, support, and evolve all types of web-based software from A to Z.</p>
 							</div>
 						</div>
 
@@ -304,7 +307,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Support</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Do you need Support or Improvements for your current Website/Project ? I can help !</p>
 							</div>
 						</div>
 					</div>
