--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 					<div class="chart" data-percent="85"><span><strong>Databases</strong>85%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>Angular/JavaScript</strong>90%</span></div>
+					<div class="chart" data-percent="90"><span><strong>Angular</strong>90%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="85"><span><strong>C/C++</strong>85%</span></div>
@@ -363,7 +363,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-1.jpg);">
+					<a href="https://github.com/khalilrez/clientApp" class="work" style="background-image: url(images/portfolio-1.png);">
 						<div class="desc">
 							<h3>Amennet E-bank</h3>
 							<span>Angular&SpringBoot E-banking Website</span>
@@ -371,26 +371,34 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-2.jpg);">
+					<a href="https://github.com/khalilrez/amennetapi" class="work" style="background-image: url(images/portfolio-2.png);">
 						<div class="desc">
 							<h3>Admin Panel</h3>
-							<span>Angular&SpringBoot Admin panel with CRUD & Authentication</span>
+							<span>Angular&SpringBoot Admin panel with CRUD & Authentication (LINK TO API)</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-3.jpg);">
+					<a  class="work" style="background-image: url(images/portfolio-3.png);">
 						<div class="desc">
 							<h3>Twig&Bootstrap5 Hublify Store Template</h3>
-							<span>Twig </span>
+							<span>Twig ( PRIVATE CODE ) </span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-4.jpg);">
+					<a  class="work" style="background-image: url(images/portfolio-4.png);">
 						<div class="desc">
 							<h3>Train-er Personal Coach Platform</h3>
 							<span>IN PROGRESS</span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="http://www.med-immo.tn/" class="work" style="background-image: url(images/portfolio-5.png);">
+						<div class="desc">
+							<h3>Med-Immo</h3>
+							<span>Bootstrap&NativePHP Real Estate Agency WebSite</span>
 						</div>
 					</a>
 				</div>
@@ -455,8 +463,7 @@
 		</div>
 	</div>
 
-	<div id="map" class="fh5co-map"></div>
-	</div>
+
 	
 	<div id="fh5co-footer">
 		<div class="container">
@@ -484,10 +491,7 @@
 	<script src="js/jquery.stellar.min.js"></script>
 	<!-- Easy PieChart -->
 	<script src="js/jquery.easypiechart.min.js"></script>
-	<!-- Google Map -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
-	<script src="js/google_map.js"></script>
-	
+
 	<!-- Main -->
 	<script src="js/main.js"></script>
 
