--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 					<a  class="work" style="background-image: url(images/portfolio-3.png);">
 						<div class="desc">
 							<h3>Twig&Bootstrap5 Hublify Store Template</h3>
-							<span>Twig ( PRIVATE CODE ) </span>
+							<span>Twig E-Store Website ( PRIVATE CODE ) </span>
 						</div>
 					</a>
 				</div>
