--- a/index.html
+++ b/index.html
@@ -381,8 +381,8 @@
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a  class="work" style="background-image: url(images/portfolio-3.png);">
 						<div class="desc">
-							<h3>Twig&Bootstrap5 Hublify Store Template</h3>
-							<span>Twig E-Store Website ( PRIVATE CODE ) </span>
+							<h3>Hublify Store Template</h3>
+							<span>Twig&Bootstrap5  E-Store Website ( PRIVATE CODE ) </span>
 						</div>
 					</a>
 				</div>
@@ -404,6 +404,7 @@
 				</div>
 			</div>
 		</div>
+	</div>
 	</div>
 
 
