--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="http://www.med-immo.tn/" class="work" style="background-image: url(images/portfolio-5.png);">
+					<a href="http://www.med-immo.tn/" class="work" style="background-image: url(images/portfolio-5.PNG);">
 						<div class="desc">
 							<h3>Med-Immo</h3>
 							<span>Bootstrap&NativePHP Real Estate Agency WebSite</span>
