--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 
 				<div class="row form-group">
 					<div class="col-md-12">
-						<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something about us"></textarea>
+						<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something about"></textarea>
 					</div>
 				</div>
 				<div class="form-group">
