--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>WordPress Web Development</h3>
-								<p>Choose a Theme , And You WordPress Site will be ready in no time !</p>
+								<p>Choose a Theme , And Your WordPress Site will be ready in no time !</p>
 							</div>
 						</div>
 
