Added Port sniffer project

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  
+
 	<title>Khalil Rezgui Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="My portfolio website" />
@@ -25,7 +25,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -45,10 +45,10 @@
 
 	</head>
 	<body>
-		
+
 	<div class="fh5co-loader"></div>
-	
-	<div id="page">	
+
+	<div id="page">
 	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
@@ -223,7 +223,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 
 	<div id="fh5co-features" class="animate-box">
 		<div class="container">
@@ -338,7 +338,7 @@
 					<div class="chart" data-percent="89"><span><strong>PHP/Symfony</strong>89%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>Databases</strong>85%</span></div>
+					<div class="chart" data-percent="40"><span><strong>RustLang</strong>40%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="90"><span><strong>Angular</strong>90%</span></div>
@@ -402,13 +402,21 @@
 						</div>
 					</a>
 				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="https://github.com/khalilrez/port_sniffer" class="work" style="background-image: url(images/port_sniffer.png);">
+						<div class="desc">
+							<h3>CLI Port Sniffer</h3>
+							<span>RustLang - Console Port Sniffer to detect open ports on network</span>
+						</div>
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
 	<div class="divider"></div>
 
 
-	
+
 	<div id="fh5co-started" class="fh5co-bg-dark">
 		<div class="overlay"></div>
 		<div class="container">
@@ -460,12 +468,12 @@
 					<input type="submit" value="Send Message" class="btn btn-primary">
 				</div>
 
-			</form>	
+			</form>
 		</div>
 	</div>
 
 
-	
+
 	<div id="fh5co-footer">
 		<div class="container">
 			<div class="row">
@@ -479,7 +487,7 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -498,4 +506,3 @@
 
 	</body>
 </html>
-
