--- a/index.html
+++ b/index.html
@@ -438,30 +438,30 @@
 			<form action="https://formspree.io/f/xknklror" method="post">
 				<div class="row form-group">
 					<div class="col-md-6">
-						<input type="text" id="fname" class="form-control" placeholder="Your firstname">
+						<input type="text" id="fname" class="form-control" placeholder="What's your name ?">
 					</div>
 				</div>
 				<div class="row form-group">
 					<div class="col-md-6">
-						<input type="text" id="lname" class="form-control" placeholder="Your lastname">
+						<input type="text" id="lname" class="form-control" placeholder="And your last name ?">
 					</div>
 				</div>
 
 				<div class="row form-group">
 					<div class="col-md-12">
-						<input type="text" id="email" class="form-control" placeholder="Your email address">
+						<input type="text" id="email" class="form-control" placeholder="What about your Email ?">
 					</div>
 				</div>
 
 				<div class="row form-group">
 					<div class="col-md-12">
-						<input type="text" id="subject" class="form-control" placeholder="Your subject of this message">
+						<input type="text" id="subject" class="form-control" placeholder="So what is this about ?">
 					</div>
 				</div>
 
 				<div class="row form-group">
 					<div class="col-md-12">
-						<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something about"></textarea>
+						<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Alright I'm all ears"></textarea>
 					</div>
 				</div>
 				<div class="form-group">
