--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 					<div class="chart" data-percent="90"><span><strong>Angular</strong>90%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>C/C++</strong>85%</span></div>
+					<div class="chart" data-percent="65"><span><strong>Python</strong>65%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="90"><span><strong>Java/SpringBoot</strong>90%</span></div>
