--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1 class="heading">Hi, I'm Khalil Rezgui !</h1>
             <h3 class="sub-heading">A Cloud Engineering Student</h6>
         </div>
-            <a class="btn-slice" href="#">
+            <a class="btn-slice" href="mailto:rezgui.khalil@esprit.tn">
                 <div class="top"><span>Get In Touch</span></div>
                   <div class="bottom"><span>Get In Touch</span></div>
               </a>
