--- a/project3.html
+++ b/project3.html
@@ -40,6 +40,7 @@ The technologies used were primarily but not entirely : Symfony , JavaFX and Jav
               </div>
         </div>
     </div>
-    
+    <script src="index.js"></script>
+
 </body>
 </html>
