--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             
             <div class="top-row">
                 <div class="heading-group">
-            <h1 class="heading">Hi, I'm Khalil Rezgui !</h1>
+            <h1 class="heading">Hi, I'm <span class="background-text heading">Khalil Rezgui ! </span></h1>
             <h3 class="sub-heading">A Cloud Engineering Student</h6>
         </div>
             <a class="btn-slice" id="pdf">
