--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Khalil Rezgui's Portfolio</title>
     <link rel="icon" type="image/x-icon" href="assets/me.png">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BJC4T6J69Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BJC4T6J69Q');
+</script>
 <body>
 
     <div class="container">
