--- a/project2.html
+++ b/project2.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
     <title>Khalil Rezgui's Portfolio</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BJC4T6J69Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BJC4T6J69Q');
+</script>
 <body>
     <div class="container">
         <a href="https://www.instagram.com/khalil_rz/">
