--- a/project3.html
+++ b/project3.html
@@ -49,6 +49,8 @@ The technologies used were primarily but not entirely : Symfony , JavaFX and Jav
               </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/@simondmc/popup-js@1.4.0/popup.min.js"></script>
+
     <script src="index.js"></script>
 
 </body>
