--- a/project2.html
+++ b/project2.html
@@ -50,6 +50,7 @@
               </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/@simondmc/popup-js@1.4.0/popup.min.js"></script>
     <script src="index.js"></script>
 
 </body>
